syntax = "proto3";
package nl.svsticky.chroma;

enum UserType {
  STANDARD = 0;
  TOKEN = 1;
}

message User {
  int32 id = 1;
  UserType type = 2;
  optional string name = 3;
}